bumped to 1.1.2